# backend-kalba

./: .dockerignore  Dockerfile  README.md  docker-compose.local.yml  fly.toml  main.py  pyproject.toml
.claude/: settings.local.json
app/: db.py  main.py
app/api/v1/: auth.py  router.py  users.py  video.py  workshops.py
app/core/: config.py  security.py
app/models/: __init__.py  auth.py  user.py  video.py  workshop.py
app/services/: daily.py
migrations/: env.py
migrations/versions/: 59b3a5b0396b_add_live_state_to_workshop_rules.py  6981675b6c6b_initial_migration.py  993f6fa74670_add_video_models.py
scripts/: test_daily.py
